add all sections need rework form

--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -1,4 +1,5 @@
 .title {
+    font-family: 'Open Sans Condensed Light';
     font-weight: 400;
     font-size: 48px;
     line-height: 65px;
@@ -6,6 +7,7 @@
     text-transform: uppercase;
     color: #fff;
     span {
+        font-family: 'Open Sans Condensed Light';
         color: $main_color;
     }
 }
