--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -26,3 +26,6 @@
 @import 'blocks/promo';
 @import 'blocks/about';
 @import 'blocks/works';
+@import 'blocks/best';
+@import 'blocks/partners';
+@import 'blocks/donate';
